# vgd_tools

./: CMakeLists.txt  README.md  log_test.cpp  timer_test.cpp
include/vgd_tools/: log.h  timer.hpp
src/: log.cpp
